--- a/charity_system_frontend/home.css
+++ b/charity_system_frontend/home.css
@@ -1,7 +1,15 @@
 
+*{
+    padding: 0;
+    margin: 0;
+    }
 .blur-background {
     filter: blur(5px);
     transition: filter 0.01s ease;
+}
+.heading{
+    display: flex;
+    justify-content: space-between;
 }
 .modal-form {
     position: fixed;
@@ -17,13 +25,7 @@
     font-weight: bold; /* Make the font bold */
     color: #000; /* Set the text color */
 }
-.btnn{
-left: 0; 
-top: 200px;
- width: 100px; 
- margin-left: 150px;
- font-family: 'Chalkboard SE', 'Comic Sans MS', cursive;
-}
+
 .logo {
     border-radius: 50%;
     height: 50px;
@@ -41,23 +43,20 @@ top: 200px;
     z-index: 2; 
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); 
 }
-*{
-padding: 0;
-margin: 0;
-}
+
 .content-box{ 
     display: flex;
     justify-content: space-between;
-    padding:20px 15px;
+   
 }
 .content-box p {
-     width: 400px;
+    
     border-radius: 10px;
     font-family:fantasy; color:rgb(5, 75, 5); padding: 10px;
     margin: 10px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1),
     0 4px 20px rgba(55, 109, 76, 0.1); 
-    font-size: 14px;
+    font-size: 16px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5),
     0px 0px 15px rgba(17, 99, 52, 0.5),
@@ -126,15 +125,17 @@ box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5),
         flex-direction: column;
     }
     .navbar-link li{
-        padding-top: 15px;
         font-size: 10.5px;
     }
-    /* .navbar-link li{
-        display: none; 
-    } 
-    .navv{
-        display: block;
-    } */
+    .modal-form {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        width: 90%;
+        transform: translate(-50%, -50%);
+        z-index: 1050; /* Ensure it is above other content */
+        display: none; /* Hidden by default */
+    }
     .navv img{
         width: 30px;
         position: fixed;
