--- a/charity-frontend/charity_system_frontend/css/shop.css
+++ b/charity-frontend/charity_system_frontend/css/shop.css
@@ -9,8 +9,8 @@
     margin: 20px;
     text-align: center;
     margin-left: 100px;
-    background-color: darkgray;
-    padding: 20px;
+    background-color: rgb(225, 224, 224);
+    padding: 25px;
 }
 .donate{
     background-color: #4D784D;
