--- a/charity-frontend/charity_system_frontend/css/header.css
+++ b/charity-frontend/charity_system_frontend/css/header.css
@@ -5,6 +5,68 @@
     display: flex;
     justify-content: space-between;
 }
+.blur-background {
+    filter: blur(5px);
+    transition: filter 0.01s ease;
+}
+.heading{
+    display: flex;
+    justify-content: space-between;
+}
+.modal-form {
+    color: #000000;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1050; 
+    display: none; 
+    border-radius: 30%;
+    width: 40%;
+    height: 90vh;
+    background-color: rgb(235, 239, 242);
+}
+.modal-form input{
+    height: 30px;
+    max-width: 260px;
+}
+.form-group{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    padding-bottom: 10px;
+    
+}
+.form-group textarea{
+    width: 260px;
+}
+.modal-loginform{
+    color: #000000;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1050; 
+    display: none; 
+    border-radius: 30%;
+    width: 350px;
+   
+}
+.modal-adminform{
+    color: #000000;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+
+       
+    transform: translate(-50%, -50%);
+    z-index: 1050; 
+    display: none; 
+    border-radius: 30%;
+    width: 350px;
+   
+
+}
 
 .navbar-link {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
