--- a/charity-frontend/charity_system_frontend/css/Admin.css
+++ b/charity-frontend/charity_system_frontend/css/Admin.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(to right, #e0f7fa, #e0f9fc);
+    background:white;
     box-sizing: border-box;
 }
 
@@ -62,10 +62,10 @@ body {
 
 .dropdown {
   background: #ffffff;
-  border: 2px solid #28a745;
+  /* border: 2px solid #28a745; */
   border-radius: 8px;
   padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
   width: calc(30% - 20px); 
   box-sizing: border-box;
@@ -77,7 +77,7 @@ body {
 }
 
 .dropdown .btn {
-  background-color: #28a745;
+  background-color: #198933;
   color: white;
   width: 100%;
   padding: 12px 20px;
