--- a/charity-frontend/charity_system_frontend/css/home.css
+++ b/charity-frontend/charity_system_frontend/css/home.css
@@ -12,6 +12,19 @@
 
 }
 
+.header {
+    background-image: url('./../photos/image-banner.jpg'); 
+    background-size: contain; 
+    background-repeat: no-repeat; 
+    background-position: center; 
+    width: 100%; 
+    height: 90vh;
+    position: relative; 
+    margin-top: 0px;
+    color: white; 
+    z-index: 2; 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); 
+}
 .logo {
     border-radius: 50%;
     height: 50px;
