--- a/charity-frontend/charity_system_frontend/css/shop.css
+++ b/charity-frontend/charity_system_frontend/css/shop.css
@@ -7,8 +7,71 @@
 .sec1 article, .sec2 article {
     margin: 10px;
     text-align: center;
-    background-color: rgb(225, 224, 224);
+    background-color: rgb(178, 215, 227);
     padding: 25px;
+}
+
+.icon-cart{
+   margin-left: 500px;
+   display: flex;
+
+}
+.image img{
+    width: 45px; 
+    height: 50px; 
+}
+.cart-tab{
+    color: #000000;
+    position:absolute;
+    overflow-y: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1050; 
+    display: none; 
+    width: 35%;
+    height: 90vh;
+    background-color: rgb(7, 7, 7);
+    }
+.cart-tab .listCart .item{
+     display: grid;
+    grid-template-columns: 70px 150px 50px 1fr;
+    gap: 10px;
+    text-align: center;
+    align-items: center; 
+    color: whitesmoke;
+}
+
+.icon-cart span{
+    display: block;
+    color: whitesmoke;
+    background-color: red;
+    width: 15px;
+    height: 20px;
+    text-align: center;
+}
+.quantity span{
+    display: inline-block;
+    border-radius: 50%;
+    width: 20px;
+    color: black;
+    background-color: aliceblue;
+    text-align: center;
+    align-items: center;
+}
+.quantity span:nth-child(2){
+    background-color: transparent;
+    color: aliceblue;
+}
+.item:nth-child(even){
+    background-color: grey;
+    color: aliceblue;
+}
+.listCart{
+    overflow: auto;
+}
+.listCart::-webkkit-scrollbar{
+    width: 0;
 }
 .donate{
     background-color: #4D784D;
@@ -41,6 +104,27 @@
     list-style-type: none;
     text-align: left;
     padding-right: 70px;
+}
+.sec1{
+    width: 250px;
+    background-color: bisque;
+    color: black;
+    font-weight: 700;
+    text-align: center;
+
+}
+.sec1 .item img{
+    width: 90%;
+    height: 150px;
+    margin: 5px 13px;
+
+}
+.sec1 .item{
+    display: block;
+}
+.sec1{
+    display: flex;
+    justify-content: center;
 }
 .cls1 {
     box-shadow:10px 10px 20px rgba(0, 0, 0, 0.5);
