--- a/charity-frontend/charity_system_frontend/css/header.css
+++ b/charity-frontend/charity_system_frontend/css/header.css
@@ -1,10 +1,7 @@
 
 
 
-.heading{
-    display: flex;
-    justify-content: space-between;
-}
+
 .blur-background {
     filter: blur(5px);
     transition: filter 0.01s ease;
@@ -105,6 +102,7 @@
     
     .heading{
         flex-direction: column;
+        height: 40px;
     }
     .navbar-link li{
         font-size: 10.5px;
