--- a/charity-frontend/charity_system_frontend/css/shop.css
+++ b/charity-frontend/charity_system_frontend/css/shop.css
@@ -137,10 +137,27 @@
     font-weight: 700;
 }
 
+.modal-form {
+    color: #000000;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1050; 
+    display: none; 
+    border-radius: 30%;
+    width: 40%;
+    height: 90vh;
+    background-color: rgb(235, 239, 242);
+}
 @media (max-width: 480px) {
     .cart-tab{
         width: 90%;
     } 
+    .modal-form{
+        width: 90%;
+        margin: 5px 5px;
+    }
 
 }
 
