--- a/charity-frontend/charity_system_frontend/css/volunteer-profile.css
+++ b/charity-frontend/charity_system_frontend/css/volunteer-profile.css
@@ -69,3 +69,36 @@ footer h5{
   color: green;
   font-weight: bold;
 }
+
+
+
+/* 
+#logoutModal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+} */
+
+
+.modal-formLogout {
+  color: #000000;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2050; 
+  display: none; 
+  border-radius: 30%;
+  width: 40%;
+  height: 30vh;
+  background-color: rgb(235, 239, 242);
+  box-shadow: 0px 0px 10px rgba(100, 99, 99, 0.2),
+    0px 0px 5px rgba(97, 98, 98, 0.2),
+    0px 0px 5px rgba(131, 132, 131, 0.2);
+}
